--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -9,52 +9,44 @@
   text-align: left;
 }
 .contact-details h1 {
-  margin-top: 200px;
-  margin-left: 500px;
+  font-size: 3rem;
+  margin-top: 35%;
+  margin-left: 50%;
 }
 .contact-details h3,
-p {
-  margin-left: 500px;
+p {margin-top: 10px;
+  margin-left: 50%;
 }
-
+.contact-details p{
+  font-size:1.2rem;
+}
 .details {
-  margin-top: 200px;
+  margin-top:15%;
   width: 500%;
   background: whitesmoke;
   font-size: 1.2rem;
   margin-left: 50px;
 }
-.details .inputbox label {
-  font-size: 3.8rem;
+.details .inputBox label {
+  font-size: 1.6rem;
 }
-.details .inputbox input {
-  width: 100px;
+.details .inputBox input{
+  width: 30%;
+  height: 35px;
 }
-
-/* .details input[type="submit"] {
-  background: transparent;
-  border: none;
-  outline: none;
-  color: white;
-  background: #03a9f4;
-  padding: 12px 124px;
-  border-radius: 5px;
-  font-size: 20px; */
-
-.details a{
-    text-decoration: none;
-    background-color: rgb(0, 0, 0) ;
-    border-radius: 25px;
-    color: hsl(0, 0%, 99%);
-    padding: 18px 30px;
-    margin-left: 50px;
-    box-shadow: 10px 10px 5px #aaaaaa;
-    }
-
-
-
-.details a:hover{background-color: rgba(103, 164, 243, 0.918);
-    color: white;
+.details .inputBox textarea{
+  width: 30%;
+  height: 80px;
 }
 
+ .details .button0{
+ background-color: rgb(5, 10, 9);
+ color: white;
+ padding: 15px 120px;
+ text-decoration: none;
+ font-size: 1.2rem;
+ box-shadow: 10px 10px 5px #aaaaaa;
+}
+.button0:hover{background-color: rgba(103, 164, 243, 0.918);
+  color: white;}
  
